--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,7 +74,7 @@
     },
     "code-runner.executorMapByGlob": {
         "test.c": "cd $workspaceRoot && clang -o $workspaceRoot/a.out $workspaceRoot/test.c",
-        "*.c|*.h": "cd $workspaceRoot && clang -o $workspaceRoot/a.out $workspaceRoot/main.c $workspaceRoot/source/NSString.c $workspaceRoot/source/NSWorkspace.c $workspaceRoot/source/NSURL.c $workspaceRoot/source/NSArray.c $workspaceRoot/source/NSRunningApplication.c -framework AppKit && $workspaceRoot/a.out"
+        "*.c|*.h": "cd $workspaceRoot && clang -o $workspaceRoot/a.out $workspaceRoot/main.c $workspaceRoot/source/NSString.c $workspaceRoot/source/NSWorkspace.c $workspaceRoot/source/NSURL.c $workspaceRoot/source/NSArray.c $workspaceRoot/source/NSRunningApplication.c $workspaceRoot/source/NSNotificationCenter.c -framework AppKit && $workspaceRoot/a.out"
     },
     "cmake.sourceDirectory": "${workspaceFolder}/.",
 }
